--- a/kafka_codes/kafka2.ipynb
+++ b/kafka_codes/kafka2.ipynb
@@ -15,7 +15,7 @@
     "ls -la\n",
     "```\n",
     "\n",
-    "## 2️⃣ Checking the List of Topics\n",
+    "## 2️⃣ Check the List of Topics\n",
     "\n",
     "Run the following command to check the list of topics on the Kafka server:\n",
     "```sh\n",
@@ -66,6 +66,15 @@
     "SERVER = \"broker:9092\"\n",
     "TOPIC = \"streaming\"\n",
     "\n",
+    "\n",
+    "def message_gen():\n",
+    "    message = {\n",
+    "                \"time\": str(datetime.now()),\n",
+    "                \"id\": random.choice(['a','b','c','d']),\n",
+    "                \"value\": random.randint(0,100)\n",
+    "              }\n",
+    "    return message\n",
+    "\n",
     "if __name__ == \"__main__\":\n",
     "    \n",
     "    \n",
@@ -77,9 +86,8 @@
     "    try:\n",
     "        while True:\n",
     "            \n",
-    "            message = {\n",
-    "                # Your Code Here\n",
-    "            }\n",
+    "            message = message_gen()\n",
+    "            \n",
     "            producer.send(TOPIC, value=message)\n",
     "            sleep(1)\n",
     "    except KeyboardInterrupt:\n",
@@ -107,14 +115,6 @@
     "---\n",
     "Now you have a basic understanding of how Apache Kafka works 🚀\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4f1599d3-a355-4f10-97a9-eecb38750cc9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
