--- a/labs/lab1.ipynb
+++ b/labs/lab1.ipynb
@@ -5,9 +5,7 @@
    "id": "dfc09e52-adab-452e-bc08-28d6eb4cf88c",
    "metadata": {},
    "source": [
-    "# REST API with Flask \n",
-    "\n",
-    " Client-Serwer"
+    "# REST API with Flask \n"
    ]
   },
   {
@@ -15,28 +13,14 @@
    "id": "82267c9c-86ab-4f9f-95c3-50b5e7d21f2c",
    "metadata": {},
    "source": [
-    "The Flask library handles adding subpages and communication with the server using functions wrapped with a decorator. Example of a decorator:\n",
+    "The goal of the lab is to introduce students to developing REST API applications in Python using the Flask library and containerizing them with Docker.\n",
     "\n",
-    "1. We define a function that takes another function as a parameter.\n",
-    "2. We define an inner function (everything in Python is an object) that executes the passed function and displays information about its execution."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7177a164-7923-4149-a0f9-a880bc0bc10d",
-   "metadata": {},
-   "source": [
-    "> Python Decorator code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "47edf9d7-401b-4cf6-8716-69553c9626ab",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# CODE"
+    "You will learn:\n",
+    "\n",
+    "- How to create a simple REST API,\n",
+    "- How to handle HTTP requests and manage errors in the API,\n",
+    "- How to test the API using pytest,\n",
+    "- How to deploy the application into a Docker container."
    ]
   },
   {
