--- a/labs/lab9.ipynb
+++ b/labs/lab9.ipynb
@@ -5,76 +5,20 @@
    "id": "86592b0f",
    "metadata": {},
    "source": [
-    "# Apache Spark EDA "
+    "# Apache Spark EDA"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "202f5db1-5f89-48f9-8c36-bce935fb6140",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "from pyspark.sql import SparkSession"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "f7412740-6656-4e45-9b92-79f536443ebe",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "spark = SparkSession.builder.getOrCreate()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "846d951c-2e03-4945-92a4-903a6e3b43a8",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "            <div>\n",
-       "                <p><b>SparkSession - in-memory</b></p>\n",
-       "                \n",
-       "        <div>\n",
-       "            <p><b>SparkContext</b></p>\n",
-       "\n",
-       "            <p><a href=\"http://bc4ece5ece68:4040\">Spark UI</a></p>\n",
-       "\n",
-       "            <dl>\n",
-       "              <dt>Version</dt>\n",
-       "                <dd><code>v3.4.1</code></dd>\n",
-       "              <dt>Master</dt>\n",
-       "                <dd><code>local[*]</code></dd>\n",
-       "              <dt>AppName</dt>\n",
-       "                <dd><code>pyspark-shell</code></dd>\n",
-       "            </dl>\n",
-       "        </div>\n",
-       "        \n",
-       "            </div>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0xffff6cc01310>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "from pyspark.sql import SparkSession\n",
+    "spark = SparkSession.builder.getOrCreate()\n",
     "spark"
    ]
   },
@@ -85,7 +29,9 @@
     "tags": []
    },
    "source": [
-    "## Create Data\n",
+    "## Load datasets\n",
+    "\n",
+    "Open new terminal\n",
     "\n",
     "```bash\n",
     "mkdir data\n",
@@ -93,8 +39,9 @@
     "curl -L -o donation.zip http://bit.ly/1Aoywaq\n",
     "unzip donation.zip\n",
     "unzip 'block_*.zip'\n",
-    "\n",
-    "```"
+    "rm donation.zip block*.zip \n",
+    "```\n",
+    "now we can download not only one file (as in pandas) but all files with our data."
    ]
   },
   {
@@ -106,7 +53,6 @@
    },
    "outputs": [],
    "source": [
-    "# create dataframe \n",
     "prev = spark.read.csv(\"data/block*.csv\")"
    ]
   },
@@ -155,11 +101,21 @@
    },
    "outputs": [],
    "source": [
-    "# dodatkowe opcje z header i wartości null \n",
-    "parsed = spark.read.option(\"header\", \"true\")\\\n",
-    ".option(\"nullValue\", \"?\")\\\n",
-    ".option(\"inferSchema\", \"true\")\\\n",
-    ".csv(\"data/block*.csv\")"
+    "parsed = (\n",
+    "    spark.read\n",
+    "    .option(\"header\", \"true\")\n",
+    "    .option(\"nullValue\", \"?\")\n",
+    "    .option(\"inferSchema\", \"true\")\n",
+    "    .csv(\"data/block*.csv\")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17b81f05",
+   "metadata": {},
+   "source": [
+    "> find info about `.format()` method in Apache Spark"
    ]
   },
   {
@@ -214,7 +170,7 @@
    },
    "outputs": [],
    "source": [
-    "parsed.write.format(\"parquet\").save(\"data/block2.parquet\")"
+    "parsed.write.format(\"parquet\").save(\"data/block.parquet\")"
    ]
   },
   {
@@ -634,13 +590,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8ed694ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql import SparkSession\n",
+    "spark = SparkSession.builder.getOrCreate()\n",
+    "\n",
+    "parsed = (\n",
+    "    spark.read\n",
+    "    .option(\"header\", \"true\")\n",
+    "    .option(\"nullValue\", \"?\")\n",
+    "    .option(\"inferSchema\", \"true\")\n",
+    "    .csv(\"data/block*.csv\")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d381357d-6514-4071-854d-1f9d26664b64",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# zweryfikuj schemat danych\n",
     "parsed.printSchema()"
    ]
   },
@@ -653,8 +627,16 @@
    },
    "outputs": [],
    "source": [
-    "# sprawdz wartosci dla pierwszego rzedu\n",
     "parsed.first()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c099691f",
+   "metadata": {},
+   "source": [
+    "> What is the `Row()` object?\n",
+    "> What is basic object for a pandas DataFrame? "
    ]
   },
   {
@@ -666,21 +648,15 @@
    },
    "outputs": [],
    "source": [
-    "# ile przypadkow \n",
     "parsed.count()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "89429913-e699-413b-b65c-c4f6c954069b",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "8ecce52a",
+   "metadata": {},
    "source": [
-    "# zapisz do pamieci na klastrze (1 maszyna) \n",
-    "parsed.cache()"
+    "Let's check info about our Target"
    ]
   },
   {
@@ -692,10 +668,17 @@
    },
    "outputs": [],
    "source": [
-    "# target \"is_match\" liczba zgodnych i niezgodnych rekordow\n",
     "from pyspark.sql.functions import col\n",
     "\n",
     "parsed.groupBy(\"is_match\").count().orderBy(col(\"count\").desc()).show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4331905",
+   "metadata": {},
+   "source": [
+    "You can find aggregations about other features"
    ]
   },
   {
@@ -707,10 +690,17 @@
    },
    "outputs": [],
    "source": [
-    "# inne agregaty agg\n",
     "from pyspark.sql.functions import avg, stddev, stddev_pop\n",
     "\n",
     "parsed.agg(avg(\"cmp_sex\"), stddev(\"cmp_sex\"), stddev_pop(\"cmp_sex\")).show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26bc5a28",
+   "metadata": {},
+   "source": [
+    "You can also do everything on SQL "
    ]
   },
   {
@@ -722,7 +712,6 @@
    },
    "outputs": [],
    "source": [
-    "# polecenia sql - przypisanie nazwy dla silnika sql - tabela przejsciowa\n",
     "parsed.createOrReplaceTempView(\"dane\")"
    ]
   },
@@ -747,7 +736,6 @@
    },
    "outputs": [],
    "source": [
-    "# zbiorcze statystyki \n",
     "summary = parsed.describe()\n",
     "summary.show()"
    ]
@@ -766,10 +754,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d729f99f-a5bb-49be-8aa7-4d5fa90b1107",
+   "id": "5946681d",
    "metadata": {},
    "source": [
-    "> which feature you will choose c1 or c2 "
+    "> How we can filter our data with rows and columns? "
    ]
   },
   {
@@ -781,11 +769,9 @@
    },
    "outputs": [],
    "source": [
-    "# statystyki dla poszczegolnych klas\n",
-    "\n",
-    "# filtrowanie sql\n",
+    "# like in sql\n",
     "matches = parsed.where(\"is_match = true\")\n",
-    "# filtrowanie pyspark\n",
+    "# like in spark\n",
     "misses = parsed.filter(col(\"is_match\") == False)\n",
     "\n",
     "match_summary = matches.describe()\n",
@@ -823,7 +809,7 @@
     "tags": []
    },
    "source": [
-    "## Pandas data frame"
+    "## Go to pandas data frame"
    ]
   },
   {
@@ -890,6 +876,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "84dc51f1",
+   "metadata": {},
+   "source": [
+    "> Check our schema "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0a6ec544-a601-45a2-8377-c751096dbbb0",
@@ -898,7 +892,7 @@
    },
    "outputs": [],
    "source": [
-    "summaryT.printSchema() # czy dobre typy danych ?? "
+    "summaryT.printSchema() "
    ]
   },
   {
@@ -927,19 +921,7 @@
    },
    "outputs": [],
    "source": [
-    "summaryT.printSchema() # teraz lepiej"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27182754-f6e9-4dd3-9695-cfaf484e0e68",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# wykonaj to samo dla tabel match i miss"
+    "summaryT.printSchema()"
    ]
   },
   {
@@ -1035,9 +1017,9 @@
    },
    "outputs": [],
    "source": [
-    "## score = suma zmiennych\n",
-    "zmienne = ['cmp_plz','cmp_by','cmp_bd','cmp_lname_c1','cmp_bm']\n",
-    "suma = \" + \".join(zmienne)"
+    "## score = sum of features\n",
+    "features = ['cmp_plz','cmp_by','cmp_bd','cmp_lname_c1','cmp_bm']\n",
+    "score = \" + \".join(features)"
    ]
   },
   {
@@ -1049,7 +1031,7 @@
    },
    "outputs": [],
    "source": [
-    "suma"
+    "score"
    ]
   },
   {
@@ -1073,8 +1055,8 @@
    },
    "outputs": [],
    "source": [
-    "scored = parsed.fillna(0, subset=zmienne)\\\n",
-    ".withColumn('score', expr(suma))\\\n",
+    "scored = parsed.fillna(0, subset=features)\\\n",
+    ".withColumn('score', expr(score))\\\n",
     ".select('score','is_match')"
    ]
   },
